# reedsolomon

./: .gitignore  CMakeLists.txt  Makefile.cuda  README.md  diff-samples.sh  galois.cpp  galois.h  galois_test.cpp  main.cpp  matrix.cpp  matrix.cu  matrix.h  matrix_test.cpp  notes.md  rs.cpp  rs.cu  rs.h  rs_test.cpp  test1.cpp  test2.cpp  test_main.cpp  util.cpp  util.h
cuda/: README.md  add.cu  hello-world.cu  vector_add.c  vector_add.cu
